--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <title>A JS calculator</title>
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script defer src="../javascripts/index.js"></script>
 </head>
